<resources>
    <string name="app_name">Εμβολιασμός Covid-19</string>
    <string name="sign_out_text">Αποσύνδεση</string>
    <string name="role_asign">Ρόλοι χρηστών</string>
    <string name="search_hospital">Αναζήτηση εμβολιαστικού κέντρου</string>
    <string name="shοw_hospital_list">Εμφάνιση εμβολιαστικών κέντρων</string>
    <string name="login_error">Ανεπιτυχής προσπάθεια σύνδεσης. Προσπαθήστε ξάνα.</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_api_key">AIzaSyBYgC_jte0OKMviFXK_LRuxaY9L8hOy_-c</string>
    <string name="user_login_message">Αναζητείστε το πλησιέστερο εμβολιαστικό κέντρο με βάση την τοποθεσίας σας και επιλέξτε ημέρα και ώρα εμβολιασμού.</string>
    <string name="doctor_login_message">Επιλέξτε κέντρο εμβολιασμού για εμφάνιση των προγραμματισμένων εμβολιασμών.</string>
    <string name="btn_map">Χάρτης</string>
    <string name="btn_satellite">Δορυφόρος</string>
    <string name="btn_hybrid">Έδαφος</string>
    <string name="list_of_hospitals_title">Πλησιέστερα εμβολιαστικά κέντρα</string>
    <string name="list_of_recycler_hospitals_title">Εμβολιαστικά κέντρα</string>
    <string name="list_of_appointments_title">Ραντεβού</string>
    <string name="list_of_user_roles">Χρήστες</string>
    <string name="name_title">Όνομα</string>
    <string name="last_name_title">Επίθετο</string>
    <string name="telephone_title">Τηλέφωνο</string>
    <string name="email_title">Email</string>
    <string name="save_button">Αποθήκευση</string>
    <string name="select_date_text">Επιλέξτε ημέρα</string>
    <string name="select_time_text">Επιλέξτε ώρα</string>
    <string name="first_dose">1η δόση : </string>
    <string name="second_dose">2η δόση : </string>
    <string name="gps_title">GPS απενεργοποιημένο</string>
    <string name="gps_message">Για να συνεχίσετε ενεργοποιήστε την τοποθεσία συσκευής.</string>
    <string name="gps_yes">ΟΚ</string>
    <string name="gps_no">ΟΧΙ, ΕΥΧΑΡΙΣΤΩ</string>
    <string name="save_appointment_error_message">Παρακαλώ συμπληρώστε όλα τα πεδία</string>
    <string name="save_appointment_message">Το ραντεβού σας έχει καταχωρηθεί</string>
    <string name="doctor_switch">Γιατρός</string>
</resources>