<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/large_margin"
        android:layout_marginTop="@dimen/extra_large_margin"
        tools:context=".activities.AppointmentActivity">

        <TextView
            android:id="@+id/appointment_hospital_title"
            style="@style/appointment_hospital_title"
            app:layout_constraintBottom_toTopOf="@id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="hospital title" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/extra_large_margin"
            app:layout_constraintTop_toBottomOf="@+id/appointment_hospital_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/extra_large_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/date_layout"
                    style="@style/appointment_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appointment_hospital_title">

                    <TextView
                        style="@style/appointment_text_view"
                        android:text="@string/select_date_text" />

                    <ImageView
                        android:id="@+id/date_picker_image"
                        style="@style/date_picker_style"
                        app:srcCompat="@drawable/ic_calendar" />

                    <TextView
                        android:id="@+id/selected_date"
                        style="@style/appointment_text_view"
                        tools:text="@string/select_date_text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/time_layout"
                    style="@style/appointment_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_layout">

                    <TextView
                        style="@style/appointment_text_view"
                        android:text="@string/select_time_text" />

                    <ImageView
                        android:id="@+id/time_picker_image"
                        style="@style/date_picker_style"
                        app:srcCompat="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/selected_time"
                        style="@style/appointment_text_view"
                        tools:text="@string/select_date_text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/name_layout"
                    style="@style/appointment_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_layout">

                    <TextView
                        style="@style/appointment_text_view"
                        android:text="@string/name_title" />

                    <EditText
                        android:id="@+id/name_appointment"
                        style="@style/appointment_edit_text"
                        tools:text="Name" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/last_name_layout"
                    style="@style/appointment_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_layout">

                    <TextView
                        style="@style/appointment_text_view"
                        android:text="@string/last_name_title" />

                    <EditText
                        android:id="@+id/last_name_appointment"
                        style="@style/appointment_edit_text"
                        tools:text="Lastname" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/telephone_layout"
                    style="@style/appointment_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/last_name_layout">

                    <TextView
                        style="@style/appointment_text_view"
                        android:text="@string/telephone_title" />

                    <EditText
                        android:id="@+id/telephone_appointment"
                        style="@style/appointment_edit_text"
                        android:inputType="phone"
                        tools:text="Telephone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/date_one_linear_layout"
                    style="@style/date_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/telephone_layout"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/first_dose"
                        style="@style/appointment_dose"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/date_two_linear_layout"
                    style="@style/date_linear_layout"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_one_linear_layout">

                    <TextView
                        android:id="@+id/second_dose"
                        style="@style/appointment_dose"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/save_button_linear_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_two_linear_layout">
                    <android.widget.Button
                        android:id="@+id/save_appointment"
                        style="@style/save_appointment_button" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>